Modified path for application

--- a/src/shopperior-ng/src/app/modules/home/pages/home/home.component.html
+++ b/src/shopperior-ng/src/app/modules/home/pages/home/home.component.html
@@ -2,6 +2,6 @@
   <div class="hero-text">
     <h1>Welcome to Shopperior</h1>
     <h2>This will be some fancy marketing talk about how great this app is.</h2>
-    <a routerLink="/dashboard" mat-raised-button color="accent">START USING SHOPPERIOR</a>
+    <a routerLink="/app/dashboard" mat-raised-button color="accent">START USING SHOPPERIOR</a>
   </div>
 </header>
