--- a/src/shopperior-ng/src/app/core/visitor-layout/visitor-layout.component.html
+++ b/src/shopperior-ng/src/app/core/visitor-layout/visitor-layout.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary" class="toolbar">
     <h1 class="app-name">Shopperior</h1>
     <span class="spacer"></span>
-    <a routerLink="/dashboard" mat-raised-button>SIGN IN</a>
+    <a routerLink="/app/dashboard" mat-raised-button>SIGN IN</a>
   </mat-toolbar>
 
   <router-outlet></router-outlet>
