--- a/src/shopperior-ng/src/app/modules/home/pages/home/home.component.scss
+++ b/src/shopperior-ng/src/app/modules/home/pages/home/home.component.scss
@@ -1,10 +1,13 @@
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../../../assets/img/hero.jpg");
-  min-height: 900px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/img/hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 .hero-text {
