--- a/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.scss
+++ b/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.scss
@@ -1,27 +1,14 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 .toolbar {
   position: fixed;
   z-index: 2;
 }
-
 h1.app-name {
   margin-left: 8px;
 }
-
 .sidenav-container {
-  margin-top: 56px;
-  flex: 1;
-}
-
-.content-container {
-  margin: 8px;
+  position: absolute;
+  top: 56px;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
