--- a/src/shopperior-ng/src/app/modules/visitor-layout/pages/visitor-layout/visitor-layout.component.html
+++ b/src/shopperior-ng/src/app/modules/visitor-layout/pages/visitor-layout/visitor-layout.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-  <mat-toolbar color="primary" class="toolbar">
-    <h1 class="app-name">Shopperior</h1>
-    <span class="spacer"></span>
-    <a routerLink="/app/dashboard" mat-raised-button>SIGN IN</a>
-  </mat-toolbar>
-
+<mat-toolbar color="primary" class="toolbar">
+  <h1 class="app-name">Shopperior</h1>
+  <span class="spacer"></span>
+  <a routerLink="/app/dashboard" mat-raised-button>SIGN IN</a>
+</mat-toolbar>
+<div class="content">
   <router-outlet></router-outlet>
 </div>
+
