--- a/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
+++ b/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
@@ -8,7 +8,7 @@
   <mat-sidenav #sidenav mode="over" (keydown.escape)="sidenav.close()">
     <mat-nav-list>
       <mat-list-item>
-        {{user.name}}
+        {{ (user | async)?.name }}
       </mat-list-item>
       <mat-list-item>
         <a routerLink="/app/dashboard">Dashboard</a>
