--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar>
-  <p>Lists</p>
+  <span>Lists</span>
   <span class="toolbar-spacer"></span>
-  <a mat-icon-button routerLink="/lists/create" aria-label="Button with a plus icon">
+  <a mat-icon-button routerLink="app/lists/create" aria-label="Button with a plus icon">
     <mat-icon>add</mat-icon>
   </a>
 </mat-toolbar>
 <mat-nav-list>
   <mat-list-item *ngFor="let shoppingList of shoppingLists">
-    <a matLine routerLink="/lists/{{shoppingList.guid.toString()}}">{{ shoppingList.name }}</a>
+    <a matLine routerLink="app/lists/{{shoppingList.guid.toString()}}">{{ shoppingList.name }}</a>
     <button mat-icon-button (click)="onDeleteListClick()">
       <mat-icon>delete</mat-icon>
     </button>
