--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-create/shopping-list-create.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-create/shopping-list-create.component.html
@@ -1,16 +1,12 @@
 <div class="form-container">
-  <form [formGroup]="listForm" (submit)="onSubmit()">
-    <mat-form-field appearance="fill" class="width-100">
+  <form [formGroup]="listForm" (submit)="submitForm()">
+    <mat-form-field appearance="outline" class="width-100">
       <mat-label>Name</mat-label>
       <input matInput formControlName="name" />
     </mat-form-field>
-    <mat-form-field appearance="fill" class="width-100">
-      <mat-label>Description</mat-label>
-      <textarea matInput formControlName="description"></textarea>
-    </mat-form-field>
     <mat-action-list>
       <button mat-raised-button color="primary" type="submit" class="width-100" [disabled]="!listForm.valid">Save</button>
-      <button mat-raised-button type="button" class="width-100" routerLink="/lists">Cancel</button>
+      <button mat-raised-button type="button" class="width-100" routerLink="/app/lists">Cancel</button>
     </mat-action-list>
   </form>
 </div>
