Cleaned up list view code

--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
@@ -6,9 +6,9 @@
   </a>
 </mat-toolbar>
 <mat-nav-list>
-  <mat-list-item *ngFor="let shoppingList of shoppingLists">
+  <mat-list-item *ngFor="let shoppingList of shoppingLists | async">
     <a matLine routerLink="/app/lists/{{shoppingList.guid}}">{{ shoppingList.name }}</a>
-    <button mat-icon-button (click)="onDeleteListClick()">
+    <button mat-icon-button (click)="deleteList()">
       <mat-icon>delete</mat-icon>
     </button>
     <mat-divider></mat-divider>
