--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.html
@@ -8,7 +8,7 @@
 <mat-nav-list>
   <mat-list-item *ngFor="let shoppingList of shoppingLists | async">
     <a matLine routerLink="/app/lists/{{shoppingList.guid}}">{{ shoppingList.name }}</a>
-    <button mat-icon-button (click)="deleteList()">
+    <button mat-icon-button (click)="deleteList(shoppingList.guid)">
       <mat-icon>delete</mat-icon>
     </button>
     <mat-divider></mat-divider>
