Added FAB to add list item

--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-create/shopping-list-create.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-create/shopping-list-create.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="mt-1 mx-2">
   <form [formGroup]="listForm" (submit)="submitForm()">
     <mat-form-field appearance="outline" class="width-100">
       <mat-label>Name</mat-label>
