--- a/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-form/list-item-form.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-form/list-item-form.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="mt-1 mx-2">
   <form [formGroup]="itemForm" (submit)="onSubmit()">
 
     <div class="width-50-left">
