--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
@@ -7,17 +7,26 @@
   </a>
 </mat-toolbar>
 <div class="mt-1 mx-2">
-  <mat-form-field appearance="outline" class="width-100">
-    <mat-label>Store</mat-label>
-    <mat-select>
-      <mat-option value="one">First option</mat-option>
-      <mat-option value="two">Second option</mat-option>
-    </mat-select>
-  </mat-form-field>
   <mat-nav-list>
-    <mat-list-item *ngFor="let item of (shoppingList | async)?.items">
+    <mat-list-item *ngFor="let item of (listItems | async)">
       <div mat-line>{{item.name}}</div>
-      <div mat-line>{{item.brand}}</div>
+      <div mat-line *ngIf="!!item.brand">{{item.brand}}</div>
+      <div class="toolbar-spacer"></div>
+      <div>
+        <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
+      </div>
+      <mat-divider></mat-divider>
+    </mat-list-item>
+    <mat-list-item *ngIf="(cartItems | async)?.length > 0">
+      <div mat-line>In Cart</div>
+    </mat-list-item>
+    <mat-list-item *ngFor="let item of (cartItems | async)">
+      <div mat-line><s>{{item.name}}</s></div>
+      <div mat-line *ngIf="!!item.brand"><s>{{item.brand}}</s></div>
+      <div class="toolbar-spacer"></div>
+      <div>
+        <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
+      </div>
       <mat-divider></mat-divider>
     </mat-list-item>
   </mat-nav-list>
