--- a/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-dialog/list-item-dialog.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-dialog/list-item-dialog.component.html
@@ -39,14 +39,14 @@
         </mat-form-field>
       </div>
     </div>
-    <mat-form-field appearance="outline" class="width-100">
+    <!-- <mat-form-field appearance="outline" class="width-100">
       <mat-label>Unit Price</mat-label>
       <input matInput [(ngModel)]="data.unitPrice" (keyup)="calculateTotal()" />
     </mat-form-field>
     <mat-form-field appearance="outline" class="width-100">
       <mat-label>Total Price</mat-label>
       <input matInput [(ngModel)]="data.totalPrice" (keyup)="calculateUnitPrice()" />
-    </mat-form-field>
+    </mat-form-field> -->
     <mat-checkbox class="example-margin"
                   [checked]="false"
                   [(ngModel)]="data.isInCart">
