--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
@@ -11,7 +11,11 @@
     <mat-list-item *ngFor="let item of (listItems | async)">
       <div mat-line>{{item.name}}</div>
       <div mat-line *ngIf="!!item.brand">{{item.brand}}</div>
+      <div mat-line *ngIf="!!item.comment">{{item.comment}}</div>
       <div class="toolbar-spacer"></div>
+      <div class="mx-2">
+        {{item.quantity}} {{item.measurement}} 
+      </div>
       <div>
         <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
       </div>
@@ -23,7 +27,11 @@
     <mat-list-item *ngFor="let item of (cartItems | async)">
       <div mat-line><s>{{item.name}}</s></div>
       <div mat-line *ngIf="!!item.brand"><s>{{item.brand}}</s></div>
+      <div mat-line *ngIf="!!item.comment"><s>{{item.comment}}</s></div>
       <div class="toolbar-spacer"></div>
+      <div class="mx-2">
+        {{item.quantity}} {{item.measurement}} 
+      </div>
       <div>
         <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
       </div>
