--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.scss
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-lists-view/shopping-lists-view.component.scss
@@ -1,3 +1,11 @@
 .toolbar-spacer {
   flex: 1 1 auto;
 }
+.fab-placement {
+  z-index: 99;
+  right: 10%;
+  bottom: 10%;
+}
+.fixed {
+  position: fixed;
+}
