--- a/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-dialog/list-item-dialog.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-dialog/list-item-dialog.component.html
@@ -1,4 +1,12 @@
 <div class="row">
+  <div class="col-md-12">
+    <mat-form-field appearance="outline" class="width-100">
+      <mat-label>Category</mat-label>
+      <mat-select [(ngModel)]="data.categoryGuid">
+        <mat-option *ngFor="let c of categories | async" value="{{c.guid}}">{{c.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
   <div class="col-md-8">
     <mat-form-field appearance="outline" class="width-100">
       <mat-label>Item Name</mat-label>
