Added category list screen

--- a/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
+++ b/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
@@ -11,7 +11,7 @@
         {{ (user | async)?.name }}
       </mat-list-item>
       <mat-list-item>
-        <a routerLink="/app/dashboard">Dashboard</a>
+        <a routerLink="/app/categories">Categories</a>
       </mat-list-item>
       <mat-list-item>
         <a routerLink="/app/lists">Lists</a>
