--- a/src/shopperior-ng/src/app/modules/categories/pages/category-list/category-list.component.html
+++ b/src/shopperior-ng/src/app/modules/categories/pages/category-list/category-list.component.html
@@ -8,7 +8,7 @@
   </mat-list-item>
 </mat-nav-list>
 <div class="fixed fab-placement">
-  <a mat-fab routerLink="/app/categories/create" color="primary" aria-label="Button to add a category">
+  <a mat-fab routerLink="/app/categories/new" color="primary" aria-label="Button to add a category">
     <mat-icon>add</mat-icon>
   </a>
 </div>
