--- a/src/shopperior-ng/src/app/modules/categories/pages/create-category/create-category.component.html
+++ b/src/shopperior-ng/src/app/modules/categories/pages/create-category/create-category.component.html
@@ -10,7 +10,7 @@
           <button mat-raised-button color="primary" type="submit" class="width-100" [disabled]="!categoryForm.valid">Save</button>
         </div>
         <div class="col-6 mt-2">
-          <button mat-raised-button type="button" class="width-100" routerLink="/app/lists">Cancel</button>
+          <button mat-raised-button type="button" class="width-100" routerLink="/app/categories">Cancel</button>
         </div>
       </div>
     </div>
