Improved add item form

--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
@@ -44,7 +44,7 @@
   </mat-nav-list>
 </div>
 <div class="fixed fab-placement">
-  <button mat-fab color="primary" aria-label="Button to add an item" (click)="openItemDialog()">
+  <button mat-fab routerLink="/app/lists/{{guid}}/items/add" color="primary" aria-label="Button to add an item">
     <mat-icon>add</mat-icon>
   </button>
 </div>
