--- a/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-form/list-item-form.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/components/list-item-form/list-item-form.component.html
@@ -1,73 +1,88 @@
-<div class="mt-1 mx-2">
+<div class="container-fluid">
+<div class="row mt-1">
   <form [formGroup]="itemForm" (submit)="onSubmit()">
 
-    <div class="width-50-left">
-      <mat-form-field appearance="fill" class="width-100">
+    <div class="col-md-8">
+      <mat-form-field appearance="outline" class="width-100">
         <mat-label>Item Name</mat-label>
         <input matInput formControlName="name" />
       </mat-form-field>
-
-      <mat-form-field appearance="fill" class="width-100">
-        <mat-label>Details</mat-label>
-        <input matInput formControlName="details" />
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="width-100">
+      
+      <mat-form-field appearance="outline" class="width-100">
         <mat-label>Brand</mat-label>
         <input matInput formControlName="brand" />
       </mat-form-field>
-
-      <mat-form-field appearance="fill" class="width-100">
-        <mat-label>Location</mat-label>
-        <mat-select formControlName="location">
-          <mat-option value="beverages">Beverages</mat-option>
-          <mat-option value="cold">Cold</mat-option>
-          <mat-option value="frozen">Frozen</mat-option>
-          <mat-option value="pharmacy">Pharmacy</mat-option>
-          <mat-option value="produce">Produce</mat-option>
-          <mat-option value="shelves">Shelves</mat-option>
-          <mat-option value="other">Other</mat-option>
+      
+      <mat-form-field appearance="outline" class="width-100">
+        <mat-label>Details</mat-label>
+        <input matInput formControlName="details" />
+      </mat-form-field>
+      
+      <mat-form-field appearance="outline" class="width-100">
+        <mat-label>Category</mat-label>
+        <mat-select formControlName="category">
+          <mat-option *ngFor="let c of categories | async" value="{{c.guid}}">{{c.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
 
-    <div class="width-50-right">
-      <mat-form-field appearance="fill" class="control-width-20">
-        <mat-label>Qty</mat-label>
-        <input matInput formControlName="quantity" (keyup)="calculateSubtotal()" />
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="control-width-80">
-        <mat-label>Units</mat-label>
-        <mat-select formControlName="units">
-          <mat-option value="ea">each</mat-option>
-          <mat-option value="g">grams</mat-option>
-          <mat-option value="gal">gallons</mat-option>
-          <mat-option value="kg">kilograms</mat-option>
-          <mat-option value="L">liter</mat-option>
-          <mat-option value="lb">pounds</mat-option>
-          <mat-option value="mL">milliliters</mat-option>
-          <mat-option value="oz">ounces</mat-option>
-          <mat-option value="pt">pints</mat-option>
-          <mat-option value="qt">quarts</mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="width-100">
-        <mat-label>Unit Price</mat-label>
-        <input matInput formControlName="unitPrice" (keyup)="calculateSubtotal()" />
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="width-100">
-        <mat-label>Subtotal</mat-label>
-        <input matInput formControlName="subtotal" (keyup)="calculateUnitPrice()" />
-      </mat-form-field>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="width-100">
+            <mat-label>Qty</mat-label>
+            <input matInput type="number" formControlName="quantity" />
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field appearance="outline" class="width-100">
+            <mat-label>Units</mat-label>
+            <mat-select formControlName="measurement">
+              <mat-option value="ea">each</mat-option>
+              <mat-option value="lb">pounds</mat-option>
+              <mat-option value="g">grams</mat-option>
+              <mat-option value="gal">gallons</mat-option>
+              <mat-option value="kg">kilograms</mat-option>
+              <mat-option value="L">liter</mat-option>
+              <mat-option value="mL">milliliters</mat-option>
+              <mat-option value="oz">ounces</mat-option>
+              <mat-option value="pt">pints</mat-option>
+              <mat-option value="qt">quarts</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-md-12">
+          <mat-form-field appearance="fill" class="width-100">
+            <mat-label>Unit Price</mat-label>
+            <input matInput disabled formControlName="unitPrice" (keyup)="calculateSubtotal()" />
+          </mat-form-field>
+    
+          <mat-form-field appearance="fill" class="width-100">
+            <mat-label>Subtotal</mat-label>
+            <input matInput disabled formControlName="subtotal" (keyup)="calculateUnitPrice()" />
+          </mat-form-field>
+        </div>
+      </div>
     </div>
 
-    <div class="width-100">
-      <button mat-raised-button color="primary" type="submit" class="width-50-left" [disabled]="!itemForm.valid">Save</button>
-      <button mat-raised-button type="button" class="width-50-right" routerLink="/lists/{{shoppingList.guid}}">Cancel</button>
+    <div class="col-md-12">
+      <mat-checkbox class="example-margin"
+                    [checked]="false"
+                    formControlName="isInCart">
+        In Cart
+      </mat-checkbox>
+    </div>
+    <div class="col-12">
+      <div class="row">
+        <div class="col-md-6 mt-2">
+          <button mat-raised-button color="primary" type="submit" class="width-100" [disabled]="!itemForm.valid">Save</button>
+        </div>
+        <div class="col-md-6 mt-2">
+          <button mat-raised-button type="button" class="width-100" routerLink="/app/lists/{{listGuid}}">Cancel</button>
+        </div>
+      </div>
     </div>
 
   </form>
+</div>
 </div>
