--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="fixed above">
-  <a mat-icon-button routerLink="/app/lists"><mat-icon>arrow_back</mat-icon></a>
+  <a mat-icon-button routerLink="/app/lists"><mat-icon>arrow_back_ios</mat-icon></a>
   <span>{{(shoppingList | async)?.name}}</span>
   <span class="toolbar-spacer"></span>
   <a mat-icon-button routerLink="/app/lists/{{guid}}/settings" aria-label="Settings button">
