--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-settings/shopping-list-settings.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-settings/shopping-list-settings.component.html
@@ -1,31 +1,46 @@
-<div class="mt-1 mx-2">
+<div class="row mt-1 mx-1">
   <form *ngIf="!!listForm" [formGroup]="listForm" (submit)="submitForm()">
-    <mat-form-field appearance="outline" class="width-100">
-      <mat-label>Name</mat-label>
-      <input matInput formControlName="name" />
-    </mat-form-field>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-subtitle>Permissions</mat-card-subtitle>
-        <span class="toolbar-spacer"></span>
-        <a mat-icon-button aria-label="Button to add a permission" (click)="openPermissionDialog()">
-          <mat-icon>add</mat-icon>
-        </a>
-      </mat-card-header>
-      <mat-card-content>
-        <mat-list>
-          <mat-list-item *ngFor="let permission of shoppingList.permissions; index as i">
-            <div mat-line>{{permission.userEmail}}</div>
-            <div mat-line>{{permission.permission}}</div>
-            <span class="toolbar-spacer"></span>
+    <div class="col-12">
+      <mat-form-field appearance="outline" class="width-100">
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" />
+      </mat-form-field>
+    </div>
+    <div class="col-12 mb-2">
+      <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div>Categories</div>
+          </div>
+          <a mat-icon-button aria-label="Button to add a category">
+            <mat-icon>add</mat-icon>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 my-2">
+      <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div>Permissions</div>
+          </div>
+          <a mat-icon-button aria-label="Button to add a permission" (click)="openPermissionDialog()">
+            <mat-icon>add</mat-icon>
+          </a>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let permission of shoppingList.permissions; index as i">
+            <div class="ms-2 me-auto">
+              <div>{{permission.userEmail}}</div>
+              <div>{{permission.permission}}</div>
+            </div>
             <button type="button" mat-icon-button (click)="removePermission(permission)">
               <mat-icon>delete</mat-icon>
             </button>
-            <mat-divider *ngIf="i < shoppingList.permissions.length - 1"></mat-divider>
-          </mat-list-item>
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
+          </li>
+        </ul>
+      </div>
+    </div>
     <mat-action-list>
       <button mat-raised-button color="primary" type="submit" class="width-100" [disabled]="!listForm.valid">Save</button>
       <button mat-raised-button type="button" class="width-100 mt-2" (click)="cancel()">Cancel</button>
