--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-settings/shopping-list-settings.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-settings/shopping-list-settings.component.html
@@ -12,10 +12,20 @@
           <div class="ms-2 me-auto my-auto">
             <div>Categories</div>
           </div>
-          <a mat-icon-button aria-label="Button to add a category">
+          <a mat-icon-button aria-label="Button to add a category" (click)="openCategoryDialog()">
             <mat-icon>add</mat-icon>
           </a>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let category of shoppingList.categories; index as i">
+            <div class="ms-2 me-auto my-auto">
+              <div>{{category.name}}</div>
+            </div>
+            <!-- <button type="button" mat-icon-button>
+              <mat-icon>delete</mat-icon>
+            </button> -->
+          </li>
+        </ul>
       </div>
     </div>
     <div class="col-12 my-2">
@@ -30,7 +40,7 @@
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let permission of shoppingList.permissions; index as i">
-            <div class="ms-2 me-auto">
+            <div class="ms-2 me-auto my-auto">
               <div>{{permission.userEmail}}</div>
               <div>{{permission.permission}}</div>
             </div>
