--- a/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
+++ b/src/shopperior-ng/src/app/modules/shopping-lists/pages/shopping-list-items-view/shopping-list-items-view.component.html
@@ -8,20 +8,25 @@
 </mat-toolbar>
 <div class="content-container">
   <mat-nav-list>
-    <mat-list-item *ngFor="let item of (listItems | async)">
-      <div mat-line>{{item.name}}</div>
-      <div mat-line *ngIf="!!item.brand">{{item.brand}}</div>
-      <div mat-line *ngIf="!!item.comment">{{item.comment}}</div>
-      <div class="toolbar-spacer"></div>
-      <div class="mx-2">
-        {{item.quantity}} {{item.measurement}} 
-      </div>
-      <div>
-        <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
-      </div>
-      <mat-divider></mat-divider>
-    </mat-list-item>
-    <mat-list-item *ngIf="(cartItems | async)?.length > 0">
+    <div *ngFor="let vm of (listVM | async)">
+      <mat-list-item class="bg-secondary text-white">
+        <div mat-line>{{vm.categoryName}}</div>
+      </mat-list-item>
+      <mat-list-item *ngFor="let item of vm.items">
+        <div mat-line>{{item.name}}</div>
+        <div mat-line *ngIf="!!item.brand">{{item.brand}}</div>
+        <div mat-line *ngIf="!!item.comment">{{item.comment}}</div>
+        <div class="toolbar-spacer"></div>
+        <div class="mx-2">
+          {{item.quantity}} {{item.measurement}} 
+        </div>
+        <div>
+          <mat-checkbox [(ngModel)]="item.isInCart" (change)="updateListItem(item)"></mat-checkbox>
+        </div>
+        <mat-divider></mat-divider>
+      </mat-list-item>
+    </div>
+    <mat-list-item *ngIf="(cartItems | async)?.length > 0" class="bg-secondary text-white">
       <div mat-line>In Cart</div>
       <div class="toolbar-spacer"></div>
       <button mat-raised-button color="primary" type="button" (click)="checkout()">
