Improved dashboard page

--- a/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
+++ b/src/shopperior-ng/src/app/modules/user-layout/pages/user-layout/user-layout.component.html
@@ -8,7 +8,7 @@
   <mat-sidenav #sidenav mode="over" (keydown.escape)="sidenav.close()">
     <mat-nav-list>
       <mat-list-item>
-        {{ (user | async)?.name }}
+        <a routerLink="/app/dashboard">{{ (user | async)?.name }}</a>
       </mat-list-item>
       <mat-list-item>
         <a routerLink="/app/lists">Lists</a>
